# SPDF

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROGRESS.md  Playwright Learning Roadmap.md  VERSION  justfile
.build-results/: BUILD_STATUS.md  CHECK_RESULTS.md  MANUAL_TEST_PLAN.md
.cargo/: config.toml
api/: pyproject.toml
api/app/: errors.py  main.py  schemas.py
api/app/middleware/: rate_limit.py  request_id.py
api/app/routers/: account.py  billing.py  documents.py  templates.py  webhooks.py
api/app/services/: api_keys.py  jwt_auth.py  spdf_engine.py  stores.py  stripe_service.py  subscriptions.py  templates.py
api/tests/: conftest.py  test_account.py  test_billing.py  test_diff.py  test_documents.py  test_e2e.py  test_hardening.py  test_jwt_auth.py  test_rate_limit.py  test_redaction.py  test_signing.py  test_templates.py  test_webhooks.py
crates/spdf-core/: Cargo.toml
crates/spdf-core/src/: container.rs  diff.rs  dom.rs  error.rs  lib.rs  manifest.rs  redaction.rs  signing.rs  types.rs
crates/spdf-core/tests/: container_tests.rs  diff_tests.rs  dom_tests.rs  redaction_tests.rs  signing_tests.rs
crates/spdf-python/: Cargo.toml
crates/spdf-python/src/: lib.rs
crates/spdf-renderer/: Cargo.toml
crates/spdf-renderer/src/: lib.rs  pdf.rs
crates/spdf-renderer/tests/: binding_logic_tests.rs  integration_test.rs
crates/spdf-validator/: Cargo.toml
crates/spdf-validator/src/: lib.rs  rules.rs
crates/spdf-validator/tests/: validator_tests.rs
crates/spdf-wasm/: Cargo.toml
crates/spdf-wasm/src/: lib.rs
crates/spdf-wasm/tests/: wasm_logic_tests.rs
docs/specs/: Dev Plan V1.md  Dev Plan V2.md  SPDF - Technical Specification v1.0.md  SPDF Architecture & Vision Document v1.0.md  SPDF Format Specification v1.0.md  SPDF Platform System Architecture Design V1.0.md  SPDF Pre-Mortem Blocker-Buster Matrix.md  SPDF Pre-Mortem Sprint Plan Delta Analysis.md  SPDF Product Requirements Document V1.0.md  spdf_api_contract_V1.0.md  spdf_db_schema_V1.0.md
scripts/: build-status.ps1  build-status.sh  bump-version.ps1  bump-version.sh  check-log.ps1  check.ps1  dev.ps1  setup-asus.ps1  setup-asus.sh
studio/: index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
studio/src/: App.tsx  index.css
studio/src/__tests__/: ApiKeyCard.test.tsx  App.test.tsx  Dashboard.test.tsx  DocumentCard.test.tsx  ElementTree.test.tsx  GenerateForm.test.tsx  Shell.test.tsx  Templates.test.tsx  UploadZone.test.tsx  api-client.test.ts  auth-store.test.ts  document-store.test.ts  setup.ts
studio/src/components/documents/: DocumentActions.tsx  DocumentCard.tsx  UploadZone.tsx
studio/src/components/layout/: AuthGate.tsx  Header.tsx  Shell.tsx  Sidebar.tsx
studio/src/components/ui/: card.tsx  dialog.tsx  tooltip.tsx
studio/src/components/viewer/: DiffViewer.tsx  ElementTree.tsx  PdfPreview.tsx  PropertyPanel.tsx
studio/src/hooks/: use-api.ts  use-document.ts
studio/src/lib/: api-client.ts  constants.ts  utils.ts
studio/src/pages/: Dashboard.tsx  DocumentView.tsx  Generate.tsx  NotFound.tsx  Settings.tsx  Templates.tsx
studio/src/stores/: auth-store.ts  document-store.ts
