[workspace]
resolver = "2"
members = [
    "crates/spdf-core",
    "crates/spdf-renderer",
    "crates/spdf-validator",
    "crates/spdf-python",
    "crates/spdf-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Deepak Sahu <Deepak.Sahu4@cognizant.com>"]
repository = "https://github.com/2072940_cgcp/spdf"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zip = "2.0"
log = "0.4"
