[package]
name = "spdf-core"
description = "Core types, container, and DOM for the SPDF format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
zip.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3.0"
